crates/sid-widgets/src/snapshots/sid_widgets__ssh__tests__snapshot_host_list_cursor_on_add_new_row.snap
---
source: crates/sid-widgets/src/ssh.rs
expression: s
---
┌ Hosts ───────────────────────┐┌ Status ──────────────────────────────────────┐
│> + add new                   ││● Disconnected                                │
│  ○ alpha                     │└──────────────────────────────────────────────┘
│  ○ beta                      │┌ (no host selected) ──────────────────────────┐
│                              ││Select a host with j/k, Enter to connect.     │
│                              ││Tab toggles SFTP panel.                       │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
