crates/sid-widgets/src/snapshots/sid_widgets__ssh__tests__snapshot_host_list_cursor_on_second_item.snap
---
source: crates/sid-widgets/src/ssh.rs
expression: s
---
┌ Hosts ───────────────────────┐┌ Status ──────────────────────────────────────┐
│  + add new                   ││● Disconnected                                │
│  ○ alpha                     │└──────────────────────────────────────────────┘
│> ● beta                      │┌ beta ────────────────────────────────────────┐
│                              ││Select a host with j/k, Enter to connect.     │
│                              ││Tab toggles SFTP panel.                       │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
