crates/sid-widgets/src/snapshots/sid_widgets__ssh__tests__snapshot_host_list_ssh_config_entry.snap
---
source: crates/sid-widgets/src/ssh.rs
expression: s
---
┌ Hosts ───────────────────────┐┌ Status ──────────────────────────────────────┐
│> ● github.com (cfg)          ││● Disconnected                                │
│                              │└──────────────────────────────────────────────┘
│                              │┌ github.com ──────────────────────────────────┐
│                              ││Select a host with j/k, Enter to connect.     │
│                              ││Tab toggles SFTP panel.                       │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
